--- a/index.html
+++ b/index.html
@@ -24,7 +24,60 @@
         </div>
 
         <section class="features">
-            features
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-global"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">World's best luxury homes</h4>
+                <p class="feature__text">
+                    Indulge in unrivaled luxury in the finest homes, featuring exquisite design, top-tier amenities, and breathtaking locations.
+                </p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-trophy"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">Only the best properties</h4>
+                <p class="feature__text">
+                    Explore opulent properties where excellence meets luxury. Elevate your lifestyle with us, where only the finest shine.
+                </p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">All homes in top locations</h4>
+                <p class="feature__text">
+                    Discover opulent homes with exquisite design, elite amenities, and stunning locations. Welcome to luxury.
+                </p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-key"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">New home in one week</h4>
+                <p class="feature__text">
+                    Find your dream home in a week with our dedicated team, ensuring your comfort and satisfaction throughout.
+                </p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-presentation"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">Top 1% realtors</h4>
+                <p class="feature__text">
+                    Elevate your real estate experience with our top 1% realtors. We ensure a seamless journey to your dream property.
+                </p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-lock"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">Secure payment on Heavenss</h4>
+                <p class="feature__text">
+                    Experience worry-free transactions with secure payment options on Heavenss. Your financial safety is our top priority.
+                </p>
+            </div>
         </section>
 
         <div class="story__pictures">
