Finished story section

--- a/index.html
+++ b/index.html
@@ -81,11 +81,16 @@
         </section>
 
         <div class="story__pictures">
-            Story pictures
+            <img src="img/story-1.jpeg" alt="Couple with new hose" class="story__img--1">
+            <img src="img/story-2.jpeg" alt="new hose" class="story__img--2">
         </div>
 
         <div class="story__content">
-            Story content
+            <h3 class="heading-3 mb-sm">Happy customers</h3>
+            <h2 class="heading-2 heading-2--dark mb-lg">&ldquo;The best decision of our lives &rdquo;</h2>
+            <p class="story__text">I couldn't be happier with the home. The process was seamless, and the team provided excellent support throughout. Thank you for helping me find my dream home!</p>
+            <button class="btn">Find your own home</button>
+
         </div>
         <section class="homes">
             Homes
