--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="realtors__list">
         <img src="img/me.jpg" alt="realtor 1" class="realtors__img" />
         <div class="realtors__details">
-          <h4 class="heading-4 heading-4--light">Dito Natsvlishvili</h4>
+          <h4 class="heading-4 heading-4--light">Markoz Baghashvili</h4>
           <p class="realtors__sold">135 houses sold</p>
         </div>
         <img src="img/realtor-2.jpeg" alt="realtor 2" class="realtors__img" />
